fixed button alignment

--- a/Frontend/public/css/admin/navbar.css
+++ b/Frontend/public/css/admin/navbar.css
@@ -1,6 +1,6 @@
 nav {
-    width: 100vw;
-    /*min-height: 1rem;*/
+    min-width: 100vw;
+    width: 100%;
     height: 3rem;
     background-color: #333;
     display: flex;
@@ -48,13 +48,15 @@ nav {
     color: white;
     text-align: center;
     width: fit-content;
-    font-family: century-gothic, serif;
+    font-family: "Gothic Century", sans-serif !important;
 }
 
 
 body {
     margin: 0;
     padding: 0;
+    width: fit-content !important;
+    height: fit-content !important;
 }
 
 #navIcon {
